# Asteroid

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  a  create_skybox_from_cross.sh
.github/workflows/: release.yml
assets/: .gitignore  Cockpit.glb  CockpitCentered.glb  LICENSE  Rock0.glb  Rock1.glb  Rock2.glb  Rock3.glb  Rock4.glb  Rock5.glb  Rock6.glb  Rock7.glb  Rock8.glb  Rock9.glb  Spaceship.glb  Sun.glb  asteroid_generator.py  manifest  manifest.xml
assets/asteroids/: L0.glb  L1.glb  L2.glb  L3.glb  L4.glb  M0.glb  M1.glb  M2.glb  M3.glb  M4.glb  S0.glb  S1.glb  S2.glb  S3.glb  S4.glb  XL0.glb  XL1.glb  XL2.glb  XL3.glb  XL4.glb  XS0.glb  XS1.glb  XS2.glb  XS3.glb  XS4.glb  XXL0.glb  XXL1.glb  XXL2.glb  XXL3.glb  XXL4.glb
assets/background/: bg_box.aseprite
scripts/: create_skybox_from_cross.sh
src/: controller.rs  direction_controller.rs  game_states.rs  globals_structs.rs  main.rs  menu.rs  rock.rs  skybox.rs
src/asteroids/: collision.rs  mod.rs  movement.rs  spawn.rs  utils.rs
src/back_camera/: mod.rs  structs.rs
src/background_musics/: mod.rs
src/config/: mod.rs  structs.rs
src/controller/: mod.rs  structs.rs  systems.rs
src/distancemetric/: mod.rs  setup.rs  structs.rs  systems.rs
src/game_over/: drift.rs  mod.rs
src/helpers/: camera_controller.rs  mod.rs
src/menu/: camera_manipulation.rs  mod.rs  plane_cast.rs  scenes.rs  setup.rs  structs.rs  systems.rs
src/particules/: mod.rs
src/physics/: mod.rs
src/player/: ammo.rs  mod.rs
src/score_display/: mod.rs  setup.rs  structs.rs  systems.rs
(+1 files in other folders)
