[package]
name = "AST3ROID"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", features = ["jpeg", "png", "wav", "mp3"] }
rand = "0.9.2"
rand_distr = "0.5.1"
bytemuck = "1.14"
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d", "serde"] }
wgpu = { version = "27.0.1", default-features = false, features = [
  "wgsl",
  "dx12",
  "metal",
  "vulkan",
  "naga-ir",
  "fragile-send-sync-non-atomic-wasm",
] }
bevy_sprite3d = {version = "7.0"}
